# assistant

./: .env.example  .geminiignore  .gitignore  .gitmodules  .mcp.json  .plan  AGENTS.md  CLAUDE.md  CONTEXT_MEMORY.md  GEMINI.md  INSTALL.md  ORCHESTRATOR_FIX_SUMMARY.md  PLAN-sync-wakeword-fixes.md  README.md  VISUALIZATION_SYSTEM.md  VOICE_INTEGRATION_PLAN.md  assistant_config.json  install-with-agent.ps1  install-with-agent.sh  install.ps1  install.sh  pyproject.toml  requirements-anthropic.txt  requirements-claude.txt  requirements-dev.txt  requirements-openai.txt  requirements.txt  scripts  skills  start.sh
.claude/: mcp.json  settings.json  skills
agents/: debug-app.md
android/: gradlew  migrate_wake_word_rename.sh  settings.gradle.kts
android-device/: settings.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  vosk_stderr_shim.c
api/: __init__.py  __main__.py  app.py  connections.py  deps.py  indexer.py  models.py  pool.py  serializers.py  session_factory.py
conversations/: 27bfb8fe51a16ccb.json  2ea7c038497c65e5.json
default-agents/: debug-app.md
default-scripts/: cleanup-history-index.py  embed.py  index-memory.py  index_client.py  install-prerequisites.sh  recording_to_mp3.py  regen_brand_icons.py  repair.py  run.sh  search-server.py  search.py  setup-context.sh  youtube_download.py
default-skills/: debug-app  recall  scaffold-agent  scaffold-skill  wrapper-guide
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend-compat/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+433 files in other folders)
